--- a/FileShareServer/Web.config
+++ b/FileShareServer/Web.config
@@ -73,7 +73,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="DBfileEntities" connectionString="metadata=res://*/FileModel.csdl|res://*/FileModel.ssdl|res://*/FileModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;initial catalog=DBfile;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DBfileEntities" connectionString="metadata=res://*/Models.FileModel.csdl|res://*/Models.FileModel.ssdl|res://*/Models.FileModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;initial catalog=DBfile;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
